[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinytapeout_py"
version = "0.0.1"
authors = [
  { name="Matt Venn", email="matt@zerotoasiccourse.com" },
]
description = "tools to help Tiny Tapeout"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://tinytapeout.com"
"Bug Tracker" = "https://github.com/tinytapeout/tinytapeout_py/sampleproject/issues"
